# ModInputFile

./: CMakeLists.txt  ModFile.cpp  ModFile.h  MyTimer.cpp  MyTimer.h  README.md  main.cpp
outputFiles/: resulttest.txt  resulttest_2.txt
